// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubTitle > should render 1`] = `
<small
  aria-describedby="00000000-0000-4000-8000-000000000000"
  class="tc-subheader-details-text-subtitle _tc-subheader-details-text-subtitle_dde847"
>
  mySubTitle
</small>
`;

exports[`SubTitle should render 1`] = `
<small
  aria-describedby="42"
  class="tc-subheader-details-text-subtitle theme-tc-subheader-details-text-subtitle"
>
  mySubTitle
</small>
`;
